# simrex

./: CMakeLists.txt  readme.md  readme_en.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile
include/simrex/: onig.h
src/: onig.cpp
tests/: CMakeLists.txt  test_rex.cpp
